	 * survReport: added opts argument, mylim argument
	 * survReport: reduced font size of ylab when long, added markevent argument
	 * accrualReport: added studynos argument
	 * greport.sty: attach ocg-p LaTeX package so that ocgtools no longer needs ocg, asymptote, acrotex
	 * greport.sty: added poptype=3 to use tiny tables and no actual pop-ups
	 * survReport: changed default markevent to TRUE

Changes in version 0.7-0 (2015-12-02)
	 * survReport: plot cumulative incidence estimates when left hand side of formula contains Surv objects for competing risks
	 * upFirst: removed function; added to Hmisc

Changes in version 0.6-0 (2015-08-30)
   * accrualReport: put zoomed cumulative distribution on same graph as regular
	 * exReport: added option plotExRemain to suppress 2-panel dot chart, solved problem with collisions of labels on vertical cumulative exclusion plot
	 * NAMESPACE: import base functions used
	 * exReport: avoided collisions in vertical dot chart, excluded actually randomized subjects from exclusion frequencies
	 * exReport: fixed exclusion table so that even though exclusion counts for numerators exclude any randomized subjects, special conditions (indented) use all enrolled subjects in the denominator

Changes in version 0.5-3 (2015-04-20)
   * putFig: add \clearpage after every appendix table
   * exReport: fine-tuned vertical dot plot
   * dReport: rotated strip labels
   * Added new greport option nontx.col and use that in other functions, for non-treatment groups
   * dReport: changed strip label font size
   * dReport: run ggplot.summaryP output through colorFacet (new in Hmisc)
   * upFirst: leave all words with > 1 upper case letter unchanged (for acronyms)
   * accrualReport: changed denominator to randomized subjects for table corresponding to box plots of days to randomization
   * all reporting functions: use upFirst(lower=TRUE) for captions
   * appsection: new function