@@ -85,7 +85,7 @@ mfrowSuggest <- function(n, small=FALSE) {
 #'  \item{\code{pdfdir}:}{name of subdirectory in which to write \code{pdf} graphics}
 #'  \item{\code{texdir}:}{name of subdirectory in which to write \code{LaTeX} code}
 #'  \item{\code{texwhere}:}{default is \code{"texdir"} to use location specified by \code{texdir}.  Set to \code{""} to write generated non-appendix LaTeX code to the console as expected by \code{knitr}}
-#'	\item{\code{defs}"}{fully qualified file name to which to write LaTeX macro definitions such as poptables}
+#'	\item{\code{defs}:}{fully qualified file name to which to write LaTeX macro definitions such as poptables}
 #' }
 setgreportOption <- function(...) {
   default <- getOption('greport')
@@ -250,6 +250,7 @@ sampleFrac <- function(n, nobsY=NULL, table=TRUE) {
 #' @param append set to \code{FALSE} to start a new \code{file}
 #' @export
 
+# Future: for html output: base64::img(pngNeedle(sf, col=co))
 dNeedle <- function(sf, name, file='', append=TRUE) {
   co <- getgreportOption(c('er.col', 'tx.col'))
   co <- c(co$er.col, co$tx.col)
